# dpolg-booking-modern

./: .ROADMAP 2.md.icloud  .claud.yaml  .env.example  .eslintrc.cjs  .gitignore  .prettierrc  ARCHITECTURE_ANALYSIS_COMPREHENSIVE.md  ARCHITECTURE_ISSUES.md  ARCHITECTURE_PRICING.md  CHANGELOG.md  CLAUDE_RULES.md  CREATE_RELEASE.md  CRITICAL_FEATURES_CHECKLIST.md  DATABASE_CLEANUP_EXECUTION_PLAN.md  DATABASE_CLEANUP_FINAL_REPORT.md  DATABASE_CLEANUP_MIGRATION_PLAN.md  DEVELOPMENT_WORKFLOW.md  FINAL_STEPS.md  FRONTEND_INTEGRATION_PLAN.md  GUEST_DIALOG_INTEGRATION.md  INVOKE_HANDLER_COMPLETE.md  MANUAL_QA_TESTS.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  MIGRATION_STATUS.md  MOBILE_APP_SYNC_TEST.md  MULTI_USER_ANALYSIS_AND_PLAN.md  MULTI_USER_MIGRATION.md  MULTI_USER_MIGRATION_ENHANCED.md  OPTIMISTIC_LOCKING_IMPLEMENTATION.md  OPTIMISTIC_UPDATE_PATTERN.md  ORACLE_CLOUD_SETUP_GUIDE.md  PHASE_3.1a_COMPLETE.md  POSTGRESQL_MIGRATION_COMPLETE.md  POSTGRESQL_MIGRATION_COMPLETE_FINAL.md  PREVENTION_SYSTEM.md  PROGRESS_SESSION_2.md  PROGRESS_SESSION_3_CONTINUED.md  README.md  REALTIME_COLLABORATION_DESIGN.md  (+73 more)
.claude/: CLAUDE.md  settings.local.json
src-tauri/: .taurignore  Cargo.toml  booking_system 3.db  booking_system.db  booking_system.old.db  database_cleanup_phase1.sql  database_cleanup_phase3_4.sql  database_notifications.sql  dpolg-signing.key.backup  invoice-template.html  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/putzplan/: temp_putzplan_2025_10.html
src-tauri/src/: backup.rs  cleaning_timeline_pdf.rs  config.rs  database 2.rs  database.rs  database_views.rs  db_pool.rs  email.rs  email_scheduler.rs  export.rs  invoice_html.rs  lib.rs  lib_pg.rs  main.rs  payment_recipients.rs  pdf_generator.rs  pdf_generator_html.rs  pricing.rs  putzplan_debug.rs  reminder_automation.rs  reminders.rs  supabase.rs  time_utils.rs  transaction_log.rs  turso_sync.rs  validation.rs
src-tauri/src/database_pg/: error.rs  listener.rs  mod.rs  models.rs  pool.rs
src-tauri/src/database_pg/queries/: mod.rs
src-tauri/src/database_pg/repositories/: accompanying_guest_repository.rs  additional_service_repository.rs  booking_repository.rs  cleaning_task_repository.rs  company_settings_repository.rs  discount_repository.rs  discount_template_repository.rs  email_config_repository.rs  email_log_repository.rs  email_template_repository.rs  guest_credit_repository.rs  guest_repository.rs  lock_repository.rs  mod.rs  notification_settings_repository.rs  payment_recipient_repository.rs  payment_settings_repository.rs  pricing_settings_repository.rs  reminder_repository.rs  room_repository.rs  scheduled_email_repository.rs  service_template_repository.rs
src-tauri/templates/: invoice.html
(+158 files in other folders)
