[package]
name = "dpolg-booking-modern"
version = "1.8.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "dpolg-booking-modern"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dpolg_booking_modern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Database - PostgreSQL (Multi-User)
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
postgres-native-tls = "0.5"
native-tls = "0.2"
# Legacy SQLite support (for migration/backup)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
once_cell = "1.20"
rand = "0.8"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-native-tls"] }
base64 = "0.22"
aes-gcm = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
futures-util = "0.3"
pdf-writer = "0.12"
image = { version = "0.25", features = ["png", "jpeg"] }
qrcode = "0.14"
flate2 = "1.0"
tera = "1.20"
headless_chrome = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
csv = "1.3"
alphanumeric-sort = "1.5"
libsql = "0.6.0"

# Debug Profile (Development Build) - Fixes LNK1318 PDB errors + macOS Speed Optimization
[profile.dev]
# Disable debug symbols to avoid PDB errors
debug = false
# Optimize slightly for faster builds
opt-level = 0  # Changed from 1 to 0 for fastest incremental builds
# Use more codegen units for faster parallel compilation
codegen-units = 256
# Enable incremental compilation for faster rebuilds
incremental = true

# Optimize dependencies but keep fast compile times (2025 macOS Optimization)
[profile.dev.package."*"]
opt-level = 1
debug = false

# Release Profile Optimization (Production Build)
[profile.release]
# Link-Time Optimization: 10-20% faster runtime, smaller binary
lto = true
# Optimize for size and speed
opt-level = 3
# Single codegen unit for better optimization
codegen-units = 1
# Strip debug symbols for smaller binary
strip = true
# Panic = abort for smaller binary (no unwinding)
panic = "abort"

